--- a/4week/김신영/학습내용.md
+++ b/4week/김신영/학습내용.md
@@ -95,11 +95,8 @@ images: 배치에 포함된 이미지 텐서 (배치 크기, 채널 수, 높이,
 labels: 각 이미지에 대한 라벨
 next(iter(dataloader_train))을 사용하여 매 에포크마다 배치를 순회하며 학습을 진행할 수 있습니다. 이는 메모리 효율성을 높이고, 모델 학습을 보다 효과적으로 수행할 수 있도록 도와줍니다.
 
-결론
+**결론**
 컴퓨터 비전 작업에서 대규모 데이터를 효율적으로 처리하기 위해 PyTorch의 Dataset과 DataLoader는 필수적인 도구입니다. Dataset을 사용해 데이터셋을 구성하고, DataLoader를 통해 배치 단위로 데이터를 처리하면 메모리 사용을 최적화하면서도 강력한 모델 학습을 수행할 수 있습니다.
-
-## 결론
-
 `DataLoader`는 컴퓨터 비전 작업에서 대규모 데이터셋을 효율적으로 처리하는 핵심 도구입니다. `for`문을 사용하면 전체 데이터셋을 간편하게 순회할 수 있고, `next` 함수는 특정 배치를 가져오는 데 유용합니다. 이러한 도구들을 잘 활용하면, 대규모 데이터를 효과적으로 관리하고 모델 학습을 최적화할 수 있습니다.
 
 ## 6-2. TorchVision & DataLoader 2 - nn.Flatten & DataLoader for mini-batch
@@ -109,4 +106,4 @@ Linear
 ### 강의내용
 위에서 dataset과 dataloader를 활용하여 정제한 데이터를 가지고 선형회귀 모델링을 구축하고 테스트를 합니다.
 지금까지 모델링을 구축하고 테스트하는 내용이 반복됨을 느끼고 강사님이 말하기 전에 물음표에 있는 답이 무엇인지 맞출 수 있음에 학습이 되어가고 있다고 느껴졌습니다.
-마지막에 파일을 저장할 때 그냥 save&loader를 활용했는데 이번엔 pickle로 파일로 저장한 점이 조금 특이했던 것 같습ㄴ디ㅏ.
+마지막에 파일을 저장할 때 그냥 save&loader를 활용했는데 이번엔 pickle로 파일로 저장한 점이 조금 특이했던 것 같습니다.
