--- a/8week/이현민/8. Converting source code to modules - A.ipynb
+++ b/8week/이현민/8. Converting source code to modules - A.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "id": "77a8c8b7",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
     "                       test_transform,\n",
     "                       batch_size):\n",
     "\n",
-    "    with zipfile.ZipFile(\"data_food101/Food101.zip\", \"r\") as zip_f:\n",
+    "    with zipfile.ZipFile(\"/Users/ihyeonmin/Documents/Fool-AIStudy/Fool-AIStudy/8week/이현민/Food101.zip\", \"r\") as zip_f:\n",
     "        print(\"Unzipping the dataset.\") \n",
     "        zip_f.extractall(\"data_food101/data\")\n",
     "\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "62152038",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing model_module/build_model.py\n"
+      "Overwriting model_module/build_model.py\n"
      ]
     }
    ],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "50b3ac7e",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "d4cab9f4",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing model_module/utils.py\n"
+      "Overwriting model_module/utils.py\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "18918f38",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing model_module/argparser_test.py\n"
+      "Overwriting model_module/argparser_test.py\n"
      ]
     }
    ],
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "51c0fd35",
    "metadata": {},
    "outputs": [
@@ -505,10 +505,10 @@
       "\n",
       "Test for the argparser\n",
       "\n",
-      "optional arguments:\n",
+      "options:\n",
       "  -h, --help            show this help message and exit\n",
       "  --test_number TEST_NUMBER\n",
-      "                        set any number to use\n"
+      "                        set any integer to use\n"
      ]
     }
    ],
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "1ac1937f",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "id": "c25dbbe5",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "3080cdc6",
    "metadata": {},
    "outputs": [],
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "id": "25c4aa76",
    "metadata": {},
    "outputs": [
@@ -687,18 +687,11 @@
       "[INFO] Training directory : data_food101/data/train\n",
       "[INFO] Testing directory : data_food101/data/test\n",
       "Unzipping the dataset.\n",
-      "Epoch : 1 | Train_loss : 6.261635534465313 | Train_acc : 0.3828125 | Test_loss : 1.0440712571144104 | Test_acc : 0.5416666666666666\n",
-      "[INFO] Saving model to: model_module/models/CNNAugment_TinyVGG_modular.pth\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/1 [00:00<?, ?it/s]\n",
-      "100%|##########| 1/1 [00:05<00:00,  5.87s/it]\n",
-      "100%|##########| 1/1 [00:05<00:00,  5.87s/it]\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/ihyeonmin/Documents/Fool-AIStudy/Fool-AIStudy/8week/이현민/model_module/train.py\", line 96, in <module>\n",
+      "    metric_accuracy = Accuracy().to(device) # from torchmetrics import Accuracy\n",
+      "                      ^^^^^^^^^^\n",
+      "TypeError: Accuracy.__new__() missing 1 required positional argument: 'task'\n"
      ]
     }
    ],
@@ -725,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "id": "79cbd1a4",
    "metadata": {},
    "outputs": [
@@ -817,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "id": "5cfac024",
    "metadata": {},
    "outputs": [
@@ -827,7 +820,24 @@
      "text": [
       "[INFO] Predicting on data_food101/sample_pizza.jpg\n",
       "[INFO] Loading model-parameters from: model_module/models/CNNAugment_TinyVGG_modular.pth\n",
-      "[INFO] Predicted class: sushi, Prediction probability: 0.493\n"
+      "/Users/ihyeonmin/Documents/Fool-AIStudy/Fool-AIStudy/8week/이현민/model_module/predict.py:41: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load(file_path))\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/ihyeonmin/Documents/Fool-AIStudy/Fool-AIStudy/8week/이현민/model_module/predict.py\", line 74, in <module>\n",
+      "    predict_on_image()\n",
+      "  File \"/Users/ihyeonmin/Documents/Fool-AIStudy/Fool-AIStudy/8week/이현민/model_module/predict.py\", line 50, in predict_on_image\n",
+      "    img_tensor = torchvision.io.read_image(IMG_PATH)\n",
+      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/lib/python3.12/site-packages/torchvision/io/image.py\", line 297, in read_image\n",
+      "    data = read_file(path)\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/lib/python3.12/site-packages/torchvision/io/image.py\", line 53, in read_file\n",
+      "    data = torch.ops.image.read_file(str(path))\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/lib/python3.12/site-packages/torch/_ops.py\", line 1061, in __call__\n",
+      "    return self_._op(*args, **(kwargs or {}))\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "RuntimeError: [Errno 2] No such file or directory: 'data_food101/sample_pizza.jpg'\n"
      ]
     }
    ],
@@ -860,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
